# MDR1211_lcd1602_i2c

./: README.md
example/: CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  compile_commands.json
example/Drivers/: CMakeLists.txt  cmake_install.cmake
example/app/inc/: app.h  lcd1602_i2c_lib.h
example/app/src/: app.c  clk.c  lcd1602_i2c_lib.c
example/cmake/: gcc-milandr.cmake
img/: IMG_6680.DNG
lcd1602_i2c_lib/: lcd1602_i2c_lib.c  lcd1602_i2c_lib.h
